<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_listproduct"
            android:icon="@drawable/ic_liste_produits"
            android:title="@string/menu_listProduct" />

        <item
            android:id="@+id/nav_listfrigo"
            android:icon="@drawable/ic_vol_type_speaker_light"
            android:title="Frigos" />

        <item
            android:id="@+id/nav_recipe"
            android:icon="@drawable/ic_recipe"
            android:title="@string/menu_recette" />

        <item
            android:id="@+id/nav_invitation"
            android:icon="@drawable/ic_menu_invitation"
            android:title="@string/menu_invitation" />

        <item
            android:id="@+id/nav_member"
            android:icon="@drawable/ic_menu_member"
            android:title="Membres" />

    </group>
</menu>
