<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoadingActivities.SignInActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:text="@string/email_inscription"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/cnxEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/password2_inscription"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/cnxPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/connexion_button"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_green_light"
            android:shadowColor="@android:color/black"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_gravity="bottom"
            android:text="@string/log" />

    </LinearLayout>

</LinearLayout>